Templates now using colors passed by render

--- a/templates/comment_wrapper.html
+++ b/templates/comment_wrapper.html
@@ -7,13 +7,12 @@
             margin-top: 8px;
             padding-top: 8px;
             border-left: 2px solid;
-            border-color: green;
             list-style-type: none;
-            padding-inline-start: 1em;
+            padding-left: 1em;
         }
 
         body {
-            max-width: 750px;
+            max-width: 600px;
             font-family: 'Roboto', sans-serif;
         }
 
