--- a/templates/submission.html
+++ b/templates/submission.html
@@ -1,10 +1,10 @@
-<ul>
+<ul style="border-color: {{ submission_color }}">
     <li>
         <h3>
             {{ title }}
         </h3>
         <div class='username'>/u/{{ username }}</div>
-        <ul>
+        <ul style="border-color: {{ comment_color }}">
             {{ children }}
         </ul>
     </li>
